[gd_scene load_steps=17 format=3 uid="uid://c66myh1rhxl8n"]

[ext_resource type="Script" uid="uid://bvc5l4yiya3l5" path="res://script/mainmenu.gd" id="1_8f68c"]
[ext_resource type="Texture2D" uid="uid://dk74a71frhiyu" path="res://assets/Image/image 8.png" id="1_h8uk4"]
[ext_resource type="Texture2D" uid="uid://bp4l8okhwfelh" path="res://assets/Image/Crush Hour/UI/Crush Hour.png" id="2_3l6v1"]
[ext_resource type="Texture2D" uid="uid://c5vuiax3yvnmd" path="res://assets/Image/Button/Start.png" id="3_kwrf7"]
[ext_resource type="Texture2D" uid="uid://bspct26ccu0es" path="res://assets/Image/Button/Start_Press.png" id="4_kwrf7"]
[ext_resource type="Texture2D" uid="uid://dfq6xvth2ahh3" path="res://assets/Image/Button/Settings.png" id="5_8v65w"]
[ext_resource type="Texture2D" uid="uid://ct2tk53j5cq0a" path="res://assets/Image/Button/Settings_Press.png" id="6_8v65w"]
[ext_resource type="AudioStream" uid="uid://dayurc0rtbci" path="res://assets/Music/button.wav" id="6_ngfc6"]
[ext_resource type="Texture2D" uid="uid://c82s0u7mh0t1e" path="res://assets/Image/Button/Extras.png" id="7_ta3wu"]
[ext_resource type="Texture2D" uid="uid://csw2jn8ds8jhm" path="res://assets/Image/Button/Extras_Press.png" id="8_ta3wu"]
[ext_resource type="Texture2D" uid="uid://dhkwe8bno0udl" path="res://assets/Image/Button/Exit.png" id="9_8f68c"]
[ext_resource type="Texture2D" uid="uid://dv5moteee4kqd" path="res://assets/Image/Button/Exit_Press.png" id="10_8f68c"]
[ext_resource type="AudioStream" uid="uid://ji4acu1g52il" path="res://assets/Music/bgm main menu.wav" id="11_8v65w"]
[ext_resource type="PackedScene" uid="uid://fcioie8tx1xo" path="res://scene/Settings.tscn" id="13_ngfc6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h8uk4"]
texture = ExtResource("1_h8uk4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8v65w"]
texture = ExtResource("2_3l6v1")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8f68c")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_h8uk4")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 571.0
offset_right = 1234.0
offset_bottom = 728.0
theme_override_styles/panel = SubResource("StyleBoxTexture_8v65w")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -876.5
offset_top = -148.0
offset_right = 876.5
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 43
alignment = 1

[node name="Start" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_kwrf7")
texture_pressed = ExtResource("4_kwrf7")
texture_hover = ExtResource("4_kwrf7")
stretch_mode = 5

[node name="button" type="AudioStreamPlayer2D" parent="HBoxContainer/Start"]
stream = ExtResource("6_ngfc6")
bus = &"SFX"

[node name="Settings" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_8v65w")
texture_pressed = ExtResource("6_8v65w")
texture_hover = ExtResource("6_8v65w")
stretch_mode = 5

[node name="button" type="AudioStreamPlayer2D" parent="HBoxContainer/Settings"]
stream = ExtResource("6_ngfc6")
bus = &"SFX"

[node name="Extras" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_ta3wu")
texture_pressed = ExtResource("8_ta3wu")
texture_hover = ExtResource("8_ta3wu")
stretch_mode = 5

[node name="button" type="AudioStreamPlayer2D" parent="HBoxContainer/Extras"]
stream = ExtResource("6_ngfc6")
bus = &"SFX"

[node name="Exit" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("9_8f68c")
texture_pressed = ExtResource("10_8f68c")
texture_hover = ExtResource("10_8f68c")
stretch_mode = 5

[node name="button" type="AudioStreamPlayer2D" parent="HBoxContainer/Exit"]
stream = ExtResource("6_ngfc6")
bus = &"SFX"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_8v65w")
autoplay = true
bus = &"Music"

[node name="Setting" parent="." instance=ExtResource("13_ngfc6")]
visible = false
layout_mode = 1
offset_left = 14.0
offset_right = 14.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="button_down" from="HBoxContainer/Start" to="." method="_on_start_button_down"]
[connection signal="pressed" from="HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/Extras" to="." method="_on_extras_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
